reneme pug/components into pug/blocks

--- a/src/pug/layout/app.pug
+++ b/src/pug/layout/app.pug
@@ -9,9 +9,9 @@ html.page(lang="en")
       link(rel="stylesheet", href="css/style.min.css")
     body.page__body
       block header
-        include ../components/header
+        include ../blocks/header
       block content
       block footer
-        include ../components/footer
+        include ../blocks/footer
       block scripts
         script(src="js/main.js")
