fix class naming

--- a/src/pug/layout/app.pug
+++ b/src/pug/layout/app.pug
@@ -7,7 +7,7 @@ html.page(lang="en")
       meta(name="viewport", content="width=device-width, initial-scale=1.0")
       title Document
       link(rel="stylesheet", href="css/style.min.css")
-    body.page__body
+    body.page-body
       block header
         include ../blocks/header
       block content
